Reorganized into subpackages; disabled @Transactional for local mongodb database